--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "Ian",
   "license": "ISC",
@@ -13,7 +13,6 @@
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-sanitizer": "^1.0.1",
-    "method-override": "^2.3.5",
-    "mongoose": "^4.2.3"
+    "method-override": "^2.3.5"
   }
 }
